successfully init psql and dbt; still want dbt in vm

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,6 +1,8 @@
+# dbt_project.yml
 
 name: 'jaffle_shop'
 version: '0.1'
+config-version: 2
 profile: 'jaffle_shop'
 source-paths: ["models"]
 analysis-paths: ["analysis"]
